po: remove the colons from applet/info-dialog labels
This is for translator convenience.

--- a/po/ar.po
+++ b/po/ar.po
@@ -849,12 +849,12 @@ msgid "Unknown"
 msgstr "مجهول"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "عنوان IP:"
+msgid "IP Address"
+msgstr "عنوان IP"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "عنوان البثّ:"
+msgid "Broadcast Address"
+msgstr "عنوان البثّ"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -863,8 +863,8 @@ msgid "Unknown"
 msgstr "مجهول"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "قناع الشبكة الفرعية:"
+msgid "Subnet Mask"
+msgstr "قناع الشبكة الفرعية"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -895,21 +895,21 @@ msgid "General"
 msgstr "عام"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "الواجهة:"
+msgid "Interface"
+msgstr "الواجهة"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "عنوان العتاد:"
+msgid "Hardware Address"
+msgstr "عنوان العتاد"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "المُشغّل:"
+msgid "Driver"
+msgstr "المُشغّل"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "السرعة:"
+msgid "Speed"
+msgstr "السرعة"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -922,8 +922,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "السبيل الافتراضي:"
+msgid "Default Route"
+msgstr "السبيل الافتراضي"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -937,26 +937,26 @@ msgstr "متروك"
 
 #: ../src/applet-dialogs.c:815
 #, fuzzy
-msgid "VPN Type:"
+msgid "VPN Type"
 msgstr "ال_نوع:"
 
 #: ../src/applet-dialogs.c:822
 #, fuzzy
-msgid "VPN Gateway:"
+msgid "VPN Gateway"
 msgstr "البوّابة"
 
 #: ../src/applet-dialogs.c:828
 #, fuzzy
-msgid "VPN Username:"
+msgid "VPN Username"
 msgstr "اسم المس_تخدم:"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
+msgid "VPN Banner"
 msgstr ""
 
 #: ../src/applet-dialogs.c:840
 #, fuzzy
-msgid "Base Connection:"
+msgid "Base Connection"
 msgstr "الات_صال:"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
