--- a/po/ast.po
+++ b/po/ast.po
@@ -848,12 +848,12 @@ msgid "Unknown"
 msgstr "Desconocida"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "Direición IP:"
+msgid "IP Address"
+msgstr "Direición IP"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Señes de Difusión:"
+msgid "Broadcast Address"
+msgstr "Señes de Difusión"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -862,8 +862,8 @@ msgid "Unknown"
 msgstr "Desconocida"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Mázcara de sorrede:"
+msgid "Subnet Mask"
+msgstr "Mázcara de sorrede"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -894,21 +894,21 @@ msgid "General"
 msgstr "Xeneral"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Interface:"
+msgid "Interface"
+msgstr "Interface"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Señes de Hardware:"
+msgid "Hardware Address"
+msgstr "Señes de Hardware"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Driver:"
+msgid "Driver"
+msgstr "Driver"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Velocidá:"
+msgid "Speed"
+msgstr "Velocidá"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -921,8 +921,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Camín predetermináu:"
+msgid "Default Route"
+msgstr "Camín predetermináu"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -936,26 +936,26 @@ msgstr "Inoráu"
 
 #: ../src/applet-dialogs.c:815
 #, fuzzy
-msgid "VPN Type:"
+msgid "VPN Type"
 msgstr "_Triba:"
 
 #: ../src/applet-dialogs.c:822
 #, fuzzy
-msgid "VPN Gateway:"
+msgid "VPN Gateway"
 msgstr "Puerta d'enllaz"
 
 #: ../src/applet-dialogs.c:828
 #, fuzzy
-msgid "VPN Username:"
+msgid "VPN Username"
 msgstr "Nome d'_usuariu:"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
+msgid "VPN Banner"
 msgstr ""
 
 #: ../src/applet-dialogs.c:840
 #, fuzzy
-msgid "Base Connection:"
+msgid "Base Connection"
 msgstr "Co_nexón:"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
