--- a/po/be.po
+++ b/po/be.po
@@ -825,12 +825,12 @@ msgid "Unknown"
 msgstr "Невядома"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "IP-адрас:"
+msgid "IP Address"
+msgstr "IP-адрас"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Адрас шырокай трансляцыі:"
+msgid "Broadcast Address"
+msgstr "Адрас шырокай трансляцыі"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -839,8 +839,8 @@ msgid "Unknown"
 msgstr "Невядома"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Маска падсеткі:"
+msgid "Subnet Mask"
+msgstr "Маска падсеткі"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -871,21 +871,21 @@ msgid "General"
 msgstr "Агульнае"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Інтэрфейс:"
+msgid "Interface"
+msgstr "Інтэрфейс"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Апаратны адрас:"
+msgid "Hardware Address"
+msgstr "Апаратны адрас"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Драйвер:"
+msgid "Driver"
+msgstr "Драйвер"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Хуткасць:"
+msgid "Speed"
+msgstr "Хуткасць"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -898,8 +898,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Прадвызначаны маршрут:"
+msgid "Default Route"
+msgstr "Прадвызначаны маршрут"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -912,24 +912,24 @@ msgid "Ignored"
 msgstr "Ігнаравана"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "Тып VPN:"
+msgid "VPN Type"
+msgstr "Тып VPN"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "Сеткавая брама VPN:"
+msgid "VPN Gateway"
+msgstr "Сеткавая брама VPN"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "Карыстальнік VPN:"
+msgid "VPN Username"
+msgstr "Карыстальнік VPN"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "Банер VPN:"
+msgid "VPN Banner"
+msgstr "Банер VPN"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Асноўнае злучэнне:"
+msgid "Base Connection"
+msgstr "Асноўнае злучэнне"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
