--- a/po/bg.po
+++ b/po/bg.po
@@ -837,12 +837,12 @@ msgid "Unknown"
 msgstr "Неопределен"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "IP адрес:"
+msgid "IP Address"
+msgstr "IP адрес"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Адрес за разпръскване:"
+msgid "Broadcast Address"
+msgstr "Адрес за разпръскване"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -851,8 +851,8 @@ msgid "Unknown"
 msgstr "Неопределена"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Маска на подмрежата:"
+msgid "Subnet Mask"
+msgstr "Маска на подмрежата"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -883,21 +883,21 @@ msgid "General"
 msgstr "Общи"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Интерфейс:"
+msgid "Interface"
+msgstr "Интерфейс"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Хардуерен адрес:"
+msgid "Hardware Address"
+msgstr "Хардуерен адрес"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Драйвер:"
+msgid "Driver"
+msgstr "Драйвер"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Скорост:"
+msgid "Speed"
+msgstr "Скорост"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -910,8 +910,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Маршрут по подразбиране:"
+msgid "Default Route"
+msgstr "Маршрут по подразбиране"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -924,24 +924,24 @@ msgid "Ignored"
 msgstr "Игнорирана"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "Вид ВЧМ:"
+msgid "VPN Type"
+msgstr "Вид ВЧМ"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "Шлюз за ВЧМ:"
+msgid "VPN Gateway"
+msgstr "Шлюз за ВЧМ"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "Потребител за ВЧМ:"
+msgid "VPN Username"
+msgstr "Потребител за ВЧМ"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "Известие за ВЧМ:"
+msgid "VPN Banner"
+msgstr "Известие за ВЧМ"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Основна връзка:"
+msgid "Base Connection"
+msgstr "Основна връзка"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
