--- a/po/ca@valencia.po
+++ b/po/ca@valencia.po
@@ -848,12 +848,12 @@ msgid "Unknown"
 msgstr "Desconeguda"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "Adreça IP:"
+msgid "IP Address"
+msgstr "Adreça IP"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Adreça de difusió:"
+msgid "Broadcast Address"
+msgstr "Adreça de difusió"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -862,8 +862,8 @@ msgid "Unknown"
 msgstr "Desconeguda"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Màscara de subxarxa:"
+msgid "Subnet Mask"
+msgstr "Màscara de subxarxa"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -894,21 +894,21 @@ msgid "General"
 msgstr "General"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Interfície:"
+msgid "Interface"
+msgstr "Interfície"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Adreça del maquinari:"
+msgid "Hardware Address"
+msgstr "Adreça del maquinari"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Controlador:"
+msgid "Driver"
+msgstr "Controlador"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Velocitat:"
+msgid "Speed"
+msgstr "Velocitat"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -921,8 +921,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Ruta predeterminada:"
+msgid "Default Route"
+msgstr "Ruta predeterminada"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -935,24 +935,24 @@ msgid "Ignored"
 msgstr "Ignorada"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "Tipus de VPN:"
+msgid "VPN Type"
+msgstr "Tipus de VPN"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "Passarel·la VPN:"
+msgid "VPN Gateway"
+msgstr "Passarel·la VPN"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "Nom d'usuari de la VPN:"
+msgid "VPN Username"
+msgstr "Nom d'usuari de la VPN"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "Bàner de la VPN:"
+msgid "VPN Banner"
+msgstr "Bàner de la VPN"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Connexió base:"
+msgid "Base Connection"
+msgstr "Connexió base"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
@@ -1606,7 +1606,7 @@ msgstr "_Servei:"
 #: ../src/wireless-security/ws-leap.ui.h:3
 #: ../src/wireless-security/ws-wpa-psk.ui.h:3
 msgid "Sho_w password"
-msgstr "Most_ra la contrasenya:"
+msgstr "Most_ra la contrasenya"
 
 #: ../src/connection-editor/ce-page-dsl.ui.h:4
 #: ../src/connection-editor/ce-page-mobile.ui.h:4
@@ -2094,7 +2094,7 @@ msgstr "Mo_stra les contrasenyes"
 
 #: ../src/connection-editor/ce-page-ppp.ui.h:1
 msgid "Authentication"
-msgstr "Autenticació:"
+msgstr "Autenticació"
 
 #: ../src/connection-editor/ce-page-ppp.ui.h:2
 msgid "Allowed methods:"
@@ -4038,7 +4038,7 @@ msgstr "Llista de països o regions:"
 #: ../src/libnma/nma-mobile-wizard.c:1066
 #: ../src/libnm-gtk/nm-mobile-wizard.c:1067
 msgid "Country or region"
-msgstr "País o regió:"
+msgstr "País o regió"
 
 #: ../src/libnma/nma-mobile-wizard.c:1076
 #: ../src/libnm-gtk/nm-mobile-wizard.c:1077
