--- a/po/de.po
+++ b/po/de.po
@@ -883,12 +883,12 @@ msgid "Unknown"
 msgstr "Unbekannt"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "IP-Adresse:"
+msgid "IP Address"
+msgstr "IP-Adresse"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Broadcast-Adresse:"
+msgid "Broadcast Address"
+msgstr "Broadcast-Adresse"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -897,8 +897,8 @@ msgid "Unknown"
 msgstr "Unbekannt"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Subnetz-Maske:"
+msgid "Subnet Mask"
+msgstr "Subnetz-Maske"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -929,21 +929,21 @@ msgid "General"
 msgstr "Allgemein"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Schnittstelle:"
+msgid "Interface"
+msgstr "Schnittstelle"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Hardware-Adresse:"
+msgid "Hardware Address"
+msgstr "Hardware-Adresse"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Treiber:"
+msgid "Driver"
+msgstr "Treiber"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Geschwindigkeit:"
+msgid "Speed"
+msgstr "Geschwindigkeit"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -956,8 +956,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Vorgaberoute:"
+msgid "Default Route"
+msgstr "Vorgaberoute"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -970,24 +970,24 @@ msgid "Ignored"
 msgstr "Ignoriert"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "VPN-Typ:"
+msgid "VPN Type"
+msgstr "VPN-Typ"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "VPN-Gateway:"
+msgid "VPN Gateway"
+msgstr "VPN-Gateway"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "VPN-Benutzername:"
+msgid "VPN Username"
+msgstr "VPN-Benutzername"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "VPN-Banner:"
+msgid "VPN Banner"
+msgstr "VPN-Banner"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Zugordnete Verbindung:"
+msgid "Base Connection"
+msgstr "Zugordnete Verbindung"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
