--- a/po/eo.po
+++ b/po/eo.po
@@ -850,12 +850,12 @@ msgid "Unknown"
 msgstr "Nekonate"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "IP-adreso:"
+msgid "IP Address"
+msgstr "IP-adreso"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Elsenda adreso:"
+msgid "Broadcast Address"
+msgstr "Elsenda adreso"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -864,8 +864,8 @@ msgid "Unknown"
 msgstr "Nekonate"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Subreta masko:"
+msgid "Subnet Mask"
+msgstr "Subreta masko"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -896,21 +896,21 @@ msgid "General"
 msgstr "Ĝenerale"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Interfaco:"
+msgid "Interface"
+msgstr "Interfaco"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Aparatara adreso:"
+msgid "Hardware Address"
+msgstr "Aparatara adreso"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Pelilo:"
+msgid "Driver"
+msgstr "Pelilo"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Rapido:"
+msgid "Speed"
+msgstr "Rapido"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -923,8 +923,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Defaŭlta kurso:"
+msgid "Default Route"
+msgstr "Defaŭlta kurso"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -937,24 +937,24 @@ msgid "Ignored"
 msgstr "Ignorite"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "VPN-Tipo:"
+msgid "VPN Type"
+msgstr "VPN-Tipo"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "VPN-kluzo:"
+msgid "VPN Gateway"
+msgstr "VPN-kluzo"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "VPN-uzantonomo:"
+msgid "VPN Username"
+msgstr "VPN-uzantonomo"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "VPN-rubando:"
+msgid "VPN Banner"
+msgstr "VPN-rubando"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Baza konekto:"
+msgid "Base Connection"
+msgstr "Baza konekto"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
