--- a/po/et.po
+++ b/po/et.po
@@ -826,12 +826,12 @@ msgid "Unknown"
 msgstr "Tundmatu"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "IP-aadress:"
+msgid "IP Address"
+msgstr "IP-aadress"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Eetri aadress:"
+msgid "Broadcast Address"
+msgstr "Eetri aadress"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -840,8 +840,8 @@ msgid "Unknown"
 msgstr "Tundmatu"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Alamvõrgu mask:"
+msgid "Subnet Mask"
+msgstr "Alamvõrgu mask"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -872,21 +872,21 @@ msgid "General"
 msgstr "Üldine"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Liides:"
+msgid "Interface"
+msgstr "Liides"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Riistvara aadress:"
+msgid "Hardware Address"
+msgstr "Riistvara aadress"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Draiver:"
+msgid "Driver"
+msgstr "Draiver"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Kiirus:"
+msgid "Speed"
+msgstr "Kiirus"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -899,8 +899,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Vaikimisi marsruut:"
+msgid "Default Route"
+msgstr "Vaikimisi marsruut"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -913,24 +913,24 @@ msgid "Ignored"
 msgstr "Eiratakse"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "VPNi liik:"
+msgid "VPN Type"
+msgstr "VPNi liik"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "VPNi lüüs:"
+msgid "VPN Gateway"
+msgstr "VPNi lüüs"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "VPNi kasutajanimi:"
+msgid "VPN Username"
+msgstr "VPNi kasutajanimi"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "VPN-i pealkiri (banner):"
+msgid "VPN Banner"
+msgstr "VPN-i pealkiri (banner)"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Baasühendus:"
+msgid "Base Connection"
+msgstr "Baasühendus"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
