--- a/po/fa.po
+++ b/po/fa.po
@@ -850,12 +850,12 @@ msgid "Unknown"
 msgstr "ناشناس"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
+msgid "IP Address"
 msgstr "آدرس آی‌پی:‌"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "آدرس انتشار:"
+msgid "Broadcast Address"
+msgstr "آدرس انتشار"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -864,7 +864,7 @@ msgid "Unknown"
 msgstr "ناشناخته"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
+msgid "Subnet Mask"
 msgstr "نقاب زیرشبکه"
 
 #: ../src/applet-dialogs.c:492
@@ -896,21 +896,21 @@ msgid "General"
 msgstr "عمومی"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "واسط:"
+msgid "Interface"
+msgstr "واسط"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "آدرس سخت‌افزار:"
+msgid "Hardware Address"
+msgstr "آدرس سخت‌افزار"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "راه انداز:"
+msgid "Driver"
+msgstr "راه انداز"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "سرعت:"
+msgid "Speed"
+msgstr "سرعت"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -923,8 +923,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "مسیر پیش‌فرض:"
+msgid "Default Route"
+msgstr "مسیر پیش‌فرض"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -937,24 +937,24 @@ msgid "Ignored"
 msgstr "رد شد"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "نوع وی‌پی‌ان:"
+msgid "VPN Type"
+msgstr "نوع وی‌پی‌ان"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "دروازه وی‌پی‌ان:"
+msgid "VPN Gateway"
+msgstr "دروازه وی‌پی‌ان"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "نام کاربری وی‌پی‌ان:"
+msgid "VPN Username"
+msgstr "نام کاربری وی‌پی‌ان"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "نشان وی‌پی‌ان:"
+msgid "VPN Banner"
+msgstr "نشان وی‌پی‌ان"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "ارتباط پایه:"
+msgid "Base Connection"
+msgstr "ارتباط پایه"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
@@ -3838,7 +3838,7 @@ msgstr "بطور خودکار این دستگاه را باز کن"
 
 #: ../src/info.ui.h:1
 msgid "Connection Information"
-msgstr "اطلاعات اتصال:"
+msgstr "اطلاعات اتصال"
 
 #: ../src/info.ui.h:3
 msgid "Active Network Connections"
