--- a/po/fi.po
+++ b/po/fi.po
@@ -838,12 +838,12 @@ msgid "Unknown"
 msgstr "Tuntematon"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "IP-osoite:"
+msgid "IP Address"
+msgstr "IP-osoite"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Yleisosoite:"
+msgid "Broadcast Address"
+msgstr "Yleisosoite"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -852,8 +852,8 @@ msgid "Unknown"
 msgstr "Tuntematon"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Aliverkkopeite:"
+msgid "Subnet Mask"
+msgstr "Aliverkkopeite"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -884,21 +884,21 @@ msgid "General"
 msgstr "Yleiset"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Verkkolaite:"
+msgid "Interface"
+msgstr "Verkkolaite"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Fyysinen osoite:"
+msgid "Hardware Address"
+msgstr "Fyysinen osoite"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Ajuri:"
+msgid "Driver"
+msgstr "Ajuri"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Nopeus:"
+msgid "Speed"
+msgstr "Nopeus"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -911,8 +911,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Oletusyhdyskäytävä:"
+msgid "Default Route"
+msgstr "Oletusyhdyskäytävä"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -925,24 +925,24 @@ msgid "Ignored"
 msgstr "Ohitettu"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "VPN-tyyppi:"
+msgid "VPN Type"
+msgstr "VPN-tyyppi"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "VPN-yhdyskäytävä:"
+msgid "VPN Gateway"
+msgstr "VPN-yhdyskäytävä"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "VPN-käyttäjänimi:"
+msgid "VPN Username"
+msgstr "VPN-käyttäjänimi"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "VPN-selite:"
+msgid "VPN Banner"
+msgstr "VPN-selite"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Yhteys:"
+msgid "Base Connection"
+msgstr "Yhteys"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
