--- a/po/gd.po
+++ b/po/gd.po
@@ -846,12 +846,12 @@ msgid "Unknown"
 msgstr "Neo-aithnichte"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "Seòladh IP:"
+msgid "IP Address"
+msgstr "Seòladh IP"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Seòladh craolaidh:"
+msgid "Broadcast Address"
+msgstr "Seòladh craolaidh"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -860,8 +860,8 @@ msgid "Unknown"
 msgstr "Neo-aithnichte"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Subnet Mask:"
+msgid "Subnet Mask"
+msgstr "Subnet Mask"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -892,21 +892,21 @@ msgid "General"
 msgstr "Coitcheann"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Eadar-aghaidh:"
+msgid "Interface"
+msgstr "Eadar-aghaidh"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Seòladh bathair-chruaidh:"
+msgid "Hardware Address"
+msgstr "Seòladh bathair-chruaidh"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Draibhear:"
+msgid "Driver"
+msgstr "Draibhear"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Astar:"
+msgid "Speed"
+msgstr "Astar"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -919,8 +919,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "An t-slighe bhunaiteach:"
+msgid "Default Route"
+msgstr "An t-slighe bhunaiteach"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -933,24 +933,24 @@ msgid "Ignored"
 msgstr "Air a leigeil seachad"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "Seòrsa a' VPN:"
+msgid "VPN Type"
+msgstr "Seòrsa a' VPN"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "Bealach VPN:"
+msgid "VPN Gateway"
+msgstr "Bealach VPN"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "Ainm-chleachdaiche VPN:"
+msgid "VPN Username"
+msgstr "Ainm-chleachdaiche VPN"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "Bratach VPN:"
+msgid "VPN Banner"
+msgstr "Bratach VPN"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Ceangal bunasach:"
+msgid "Base Connection"
+msgstr "Ceangal bunasach"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
