--- a/po/gl.po
+++ b/po/gl.po
@@ -867,12 +867,12 @@ msgid "Unknown"
 msgstr "Descoñecido"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "Enderezo IP:"
+msgid "IP Address"
+msgstr "Enderezo IP"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Enderezo broadcast:"
+msgid "Broadcast Address"
+msgstr "Enderezo broadcast"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -881,8 +881,8 @@ msgid "Unknown"
 msgstr "Descoñecido"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Máscara de subrede:"
+msgid "Subnet Mask"
+msgstr "Máscara de subrede"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -913,21 +913,21 @@ msgid "General"
 msgstr "Xeral"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Interface:"
+msgid "Interface"
+msgstr "Interface"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Enderezo de hardware:"
+msgid "Hardware Address"
+msgstr "Enderezo de hardware"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Controlador:"
+msgid "Driver"
+msgstr "Controlador"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Velocidade:"
+msgid "Speed"
+msgstr "Velocidade"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -940,8 +940,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Camiño predeterminado:"
+msgid "Default Route"
+msgstr "Camiño predeterminado"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -954,24 +954,24 @@ msgid "Ignored"
 msgstr "Ignorado"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "Tipo de VPN:"
+msgid "VPN Type"
+msgstr "Tipo de VPN"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "Pasarela do VPN:"
+msgid "VPN Gateway"
+msgstr "Pasarela do VPN"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "Nome de usuario da VPN:"
+msgid "VPN Username"
+msgstr "Nome de usuario da VPN"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "Mensaxe da VPN:"
+msgid "VPN Banner"
+msgstr "Mensaxe da VPN"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Conexión base:"
+msgid "Base Connection"
+msgstr "Conexión base"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
