--- a/po/he.po
+++ b/po/he.po
@@ -827,12 +827,12 @@ msgid "Unknown"
 msgstr "לא ידוע"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "כתובת IP:"
+msgid "IP Address"
+msgstr "כתובת IP"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "כתובת השידור:"
+msgid "Broadcast Address"
+msgstr "כתובת השידור"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -841,8 +841,8 @@ msgid "Unknown"
 msgstr "לא ידוע"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "מסכת רשת משנה:"
+msgid "Subnet Mask"
+msgstr "מסכת רשת משנה"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -873,21 +873,21 @@ msgid "General"
 msgstr "כללי"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "מנשק:"
+msgid "Interface"
+msgstr "מנשק"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "כתובת חומרה:"
+msgid "Hardware Address"
+msgstr "כתובת חומרה"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "מנהל התקן:"
+msgid "Driver"
+msgstr "מנהל התקן"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "מהירות:"
+msgid "Speed"
+msgstr "מהירות"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -900,8 +900,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "נתיב בררת המחדל:"
+msgid "Default Route"
+msgstr "נתיב בררת המחדל"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -914,24 +914,24 @@ msgid "Ignored"
 msgstr "בהתעלמות"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "סוג ה־VPN:"
+msgid "VPN Type"
+msgstr "סוג ה־VPN"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "שער הגישה ל־VPN:"
+msgid "VPN Gateway"
+msgstr "שער הגישה ל־VPN"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "שם המשתמש ב־VPN:"
+msgid "VPN Username"
+msgstr "שם המשתמש ב־VPN"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "הכרזת ה־VPN:"
+msgid "VPN Banner"
+msgstr "הכרזת ה־VPN"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "התקשרות הבסיס:"
+msgid "Base Connection"
+msgstr "התקשרות הבסיס"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
