--- a/po/hr.po
+++ b/po/hr.po
@@ -849,12 +849,12 @@ msgid "Unknown"
 msgstr "Nepoznata"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "IP adresa:"
+msgid "IP Address"
+msgstr "IP adresa"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Adresa emitiranja:"
+msgid "Broadcast Address"
+msgstr "Adresa emitiranja"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -863,8 +863,8 @@ msgid "Unknown"
 msgstr "Nepoznata"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Maska podmreže:"
+msgid "Subnet Mask"
+msgstr "Maska podmreže"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -895,21 +895,21 @@ msgid "General"
 msgstr "Općenito"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Sučelje:"
+msgid "Interface"
+msgstr "Sučelje"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Hardverska adresa:"
+msgid "Hardware Address"
+msgstr "Hardverska adresa"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Upravljački program:"
+msgid "Driver"
+msgstr "Upravljački program"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Brzina:"
+msgid "Speed"
+msgstr "Brzina"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -922,8 +922,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Uobičajena ruta:"
+msgid "Default Route"
+msgstr "Uobičajena ruta"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -936,24 +936,24 @@ msgid "Ignored"
 msgstr "Zanemareno"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "VPN vrsta:"
+msgid "VPN Type"
+msgstr "VPN vrsta"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "VPN pristupnik:"
+msgid "VPN Gateway"
+msgstr "VPN pristupnik"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "VPN korisničko ime:"
+msgid "VPN Username"
+msgstr "VPN korisničko ime"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "VPN natpis:"
+msgid "VPN Banner"
+msgstr "VPN natpis"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Osnovno povezivanje:"
+msgid "Base Connection"
+msgstr "Osnovno povezivanje"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
