--- a/po/ja.po
+++ b/po/ja.po
@@ -856,12 +856,12 @@ msgid "Unknown"
 msgstr "不明"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "IP アドレス:"
+msgid "IP Address"
+msgstr "IP アドレス"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "ブロードキャストアドレス:"
+msgid "Broadcast Address"
+msgstr "ブロードキャストアドレス"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -870,8 +870,8 @@ msgid "Unknown"
 msgstr "不明"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "サブネットマスク:"
+msgid "Subnet Mask"
+msgstr "サブネットマスク"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -902,21 +902,21 @@ msgid "General"
 msgstr "全般"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "インターフェース:"
+msgid "Interface"
+msgstr "インターフェース"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "ハードウェアアドレス:"
+msgid "Hardware Address"
+msgstr "ハードウェアアドレス"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "ドライバー:"
+msgid "Driver"
+msgstr "ドライバー"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "速度:"
+msgid "Speed"
+msgstr "速度"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -929,8 +929,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "デフォルトルート:"
+msgid "Default Route"
+msgstr "デフォルトルート"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -943,24 +943,24 @@ msgid "Ignored"
 msgstr "無視"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "VPN の種類:"
+msgid "VPN Type"
+msgstr "VPN の種類"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "VPN ゲートウェイ:"
+msgid "VPN Gateway"
+msgstr "VPN ゲートウェイ"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "VPN ユーザー名:"
+msgid "VPN Username"
+msgstr "VPN ユーザー名"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "VPN バナー:"
+msgid "VPN Banner"
+msgstr "VPN バナー"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "ベース接続:"
+msgid "Base Connection"
+msgstr "ベース接続"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
