--- a/po/kn.po
+++ b/po/kn.po
@@ -854,12 +854,12 @@ msgid "Unknown"
 msgstr "ಅಜ್ಞಾತ"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "IP ವಿಳಾಸ:"
+msgid "IP Address"
+msgstr "IP ವಿಳಾಸ"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "ಪ್ರಸರಣಾ ವಿಳಾಸ:"
+msgid "Broadcast Address"
+msgstr "ಪ್ರಸರಣಾ ವಿಳಾಸ"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -869,8 +869,8 @@ msgid "Unknown"
 msgstr "ಅಜ್ಞಾತ"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "ಸಬ್‌ನೆಟ್ ಮಾಸ್ಕ್‍:"
+msgid "Subnet Mask"
+msgstr "ಸಬ್‌ನೆಟ್ ಮಾಸ್ಕ್‍"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -901,21 +901,21 @@ msgid "General"
 msgstr "ಸಾಮಾನ್ಯ"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "ಸಂಪರ್ಕಸಾಧನ:"
+msgid "Interface"
+msgstr "ಸಂಪರ್ಕಸಾಧನ"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "ಯಂತ್ರಾಂಶ ವಿಳಾಸ:"
+msgid "Hardware Address"
+msgstr "ಯಂತ್ರಾಂಶ ವಿಳಾಸ"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "ಚಾಲಕ:"
+msgid "Driver"
+msgstr "ಚಾಲಕ"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "ವೇಗ:"
+msgid "Speed"
+msgstr "ವೇಗ"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -928,8 +928,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "ಪೂರ್ವನಿಯೋಜಿತ ರೌಟ್:"
+msgid "Default Route"
+msgstr "ಪೂರ್ವನಿಯೋಜಿತ ರೌಟ್"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -943,26 +943,26 @@ msgstr "ಕಡೆಗಣಿಸು"
 
 #: ../src/applet-dialogs.c:815
 #, fuzzy
-msgid "VPN Type:"
+msgid "VPN Type"
 msgstr "ಬಗೆ(_T):"
 
 #: ../src/applet-dialogs.c:822
 #, fuzzy
-msgid "VPN Gateway:"
+msgid "VPN Gateway"
 msgstr "ಗೇಟ್‌ವೇ"
 
 #: ../src/applet-dialogs.c:828
 #, fuzzy
-msgid "VPN Username:"
+msgid "VPN Username"
 msgstr "ಬಳಕೆದಾರಹೆಸರು(_U):"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
+msgid "VPN Banner"
 msgstr ""
 
 #: ../src/applet-dialogs.c:840
 #, fuzzy
-msgid "Base Connection:"
+msgid "Base Connection"
 msgstr "ಸಂಪರ್ಕ(_n):"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
@@ -4627,7 +4627,7 @@ msgstr "C_A ಪ್ರಮಾಣಪತ್ರ:"
 #: ../src/wireless-security/eap-method-tls.ui.h:2
 #: ../src/wireless-security/eap-method-ttls.ui.h:3
 msgid "No CA certificate is _required"
-msgstr "ಯಾವುದೆ CA ಪ್ರಮಾಣಪತ್ರದ ಅಗತ್ಯವಿಲ್ಲ:"
+msgstr "ಯಾವುದೆ CA ಪ್ರಮಾಣಪತ್ರದ ಅಗತ್ಯವಿಲ್ಲ"
 
 #: ../src/wireless-security/eap-method-peap.ui.h:8
 #, fuzzy
