--- a/po/lt.po
+++ b/po/lt.po
@@ -858,12 +858,12 @@ msgid "Unknown"
 msgstr "Nežinomas"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "IP adresas:"
+msgid "IP Address"
+msgstr "IP adresas"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Transliacijos adresas:"
+msgid "Broadcast Address"
+msgstr "Transliacijos adresas"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -872,8 +872,8 @@ msgid "Unknown"
 msgstr "Nežinoma"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Potinklio kaukė:"
+msgid "Subnet Mask"
+msgstr "Potinklio kaukė"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -904,21 +904,21 @@ msgid "General"
 msgstr "Bendra"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Sąsaja:"
+msgid "Interface"
+msgstr "Sąsaja"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Aparatinis adresas:"
+msgid "Hardware Address"
+msgstr "Aparatinis adresas"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Tvarkyklė:"
+msgid "Driver"
+msgstr "Tvarkyklė"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Sparta:"
+msgid "Speed"
+msgstr "Sparta"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -931,8 +931,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Numatytasis maršrutas:"
+msgid "Default Route"
+msgstr "Numatytasis maršrutas"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -945,24 +945,24 @@ msgid "Ignored"
 msgstr "Nepaisoma"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "VPN tipas:"
+msgid "VPN Type"
+msgstr "VPN tipas"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "VPN tinklų sietuvas:"
+msgid "VPN Gateway"
+msgstr "VPN tinklų sietuvas"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "VPN naudotojo vardas:"
+msgid "VPN Username"
+msgstr "VPN naudotojo vardas"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "VPN reklamjuostė:"
+msgid "VPN Banner"
+msgstr "VPN reklamjuostė"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Bazinis ryšys:"
+msgid "Base Connection"
+msgstr "Bazinis ryšys"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
