--- a/po/mr.po
+++ b/po/mr.po
@@ -842,12 +842,12 @@ msgid "Unknown"
 msgstr "अपरिचीत"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "IP पत्ता:"
+msgid "IP Address"
+msgstr "IP पत्ता"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "ब्रॉडकास्ट पत्ता:"
+msgid "Broadcast Address"
+msgstr "ब्रॉडकास्ट पत्ता"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -856,8 +856,8 @@ msgid "Unknown"
 msgstr "अपरिचीत"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "सबनेट मास्क:"
+msgid "Subnet Mask"
+msgstr "सबनेट मास्क"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -888,21 +888,21 @@ msgid "General"
 msgstr "सर्वसामान्य"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "संवाद:"
+msgid "Interface"
+msgstr "संवाद"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "हार्डवेअर पत्ता:"
+msgid "Hardware Address"
+msgstr "हार्डवेअर पत्ता"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "ड्राइवर:"
+msgid "Driver"
+msgstr "ड्राइवर"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "गती:"
+msgid "Speed"
+msgstr "गती"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -915,8 +915,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "पूर्वनिर्धारीत मार्ग:"
+msgid "Default Route"
+msgstr "पूर्वनिर्धारीत मार्ग"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -930,26 +930,26 @@ msgstr "दुर्लक्ष केले"
 
 #: ../src/applet-dialogs.c:815
 #, fuzzy
-msgid "VPN Type:"
+msgid "VPN Type"
 msgstr "प्रकार (_T):"
 
 #: ../src/applet-dialogs.c:822
 #, fuzzy
-msgid "VPN Gateway:"
+msgid "VPN Gateway"
 msgstr "गेटवे"
 
 #: ../src/applet-dialogs.c:828
 #, fuzzy
-msgid "VPN Username:"
+msgid "VPN Username"
 msgstr "वापरकर्त्याचे नाव (_U):"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
+msgid "VPN Banner"
 msgstr ""
 
 #: ../src/applet-dialogs.c:840
 #, fuzzy
-msgid "Base Connection:"
+msgid "Base Connection"
 msgstr "जोडणी (_n):"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
@@ -2883,7 +2883,7 @@ msgstr "आयात करण्याजोगी फाइल नीवडा
 
 #: ../src/connection-editor/connection-helpers.c:338
 msgid "Hardware"
-msgstr "हार्डवेअर:"
+msgstr "हार्डवेअर"
 
 #: ../src/connection-editor/connection-helpers.c:365
 msgid "Virtual"
