--- a/po/ms.po
+++ b/po/ms.po
@@ -853,12 +853,12 @@ msgid "Unknown"
 msgstr "Tidak diketahui"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "Alamat IP:"
+msgid "IP Address"
+msgstr "Alamat IP"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Alamat Siar:"
+msgid "Broadcast Address"
+msgstr "Alamat Siar"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -867,8 +867,8 @@ msgid "Unknown"
 msgstr "Tidak diketahui"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Tapisan Subrangkaian:"
+msgid "Subnet Mask"
+msgstr "Tapisan Subrangkaian"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -899,21 +899,21 @@ msgid "General"
 msgstr "Am"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Antaramuka:"
+msgid "Interface"
+msgstr "Antaramuka"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Alamat Perkakasan:"
+msgid "Hardware Address"
+msgstr "Alamat Perkakasan"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Pemacu:"
+msgid "Driver"
+msgstr "Pemacu"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Kelajuan:"
+msgid "Speed"
+msgstr "Kelajuan"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -926,8 +926,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Pelayan Route:"
+msgid "Default Route"
+msgstr "Pelayan Route"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -940,24 +940,24 @@ msgid "Ignored"
 msgstr "Diabaikan"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "Jenis VPN:"
+msgid "VPN Type"
+msgstr "Jenis VPN"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "Get laluan VPN:"
+msgid "VPN Gateway"
+msgstr "Get laluan VPN"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "Namapengguna VPN:"
+msgid "VPN Username"
+msgstr "Namapengguna VPN"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "Banner VPN:"
+msgid "VPN Banner"
+msgstr "Banner VPN"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Sambungan Asas:"
+msgid "Base Connection"
+msgstr "Sambungan Asas"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
