--- a/po/nb.po
+++ b/po/nb.po
@@ -828,12 +828,12 @@ msgid "Unknown"
 msgstr "Ukjent"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "IP-adresse:"
+msgid "IP Address"
+msgstr "IP-adresse"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Kringkastingsadresse:"
+msgid "Broadcast Address"
+msgstr "Kringkastingsadresse"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -842,8 +842,8 @@ msgid "Unknown"
 msgstr "Ukjent"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Subnettmaske:"
+msgid "Subnet Mask"
+msgstr "Subnettmaske"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -874,21 +874,21 @@ msgid "General"
 msgstr "Generelt"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Grensesnitt:"
+msgid "Interface"
+msgstr "Grensesnitt"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Maskinvareadresse:"
+msgid "Hardware Address"
+msgstr "Maskinvareadresse"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Driver:"
+msgid "Driver"
+msgstr "Driver"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Hastighet:"
+msgid "Speed"
+msgstr "Hastighet"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -901,8 +901,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Forvalgt rute:"
+msgid "Default Route"
+msgstr "Forvalgt rute"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -915,24 +915,24 @@ msgid "Ignored"
 msgstr "Ignorert"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "Type VPN:"
+msgid "VPN Type"
+msgstr "Type VPN"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "VPN-gateway:"
+msgid "VPN Gateway"
+msgstr "VPN-gateway"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "Brukernavn for VPN:"
+msgid "VPN Username"
+msgstr "Brukernavn for VPN"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "VPN-topptekst:"
+msgid "VPN Banner"
+msgstr "VPN-topptekst"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Grunntilkobling:"
+msgid "Base Connection"
+msgstr "Grunntilkobling"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
@@ -4197,7 +4197,7 @@ msgstr "Dynamisk WEP (802.1X)"
 
 #: ../src/libnma/nma-wifi-dialog.c:1074 ../src/libnm-gtk/nm-wifi-dialog.c:1075
 msgid "C_reate"
-msgstr "_Lag:"
+msgstr "_Lag"
 
 #: ../src/libnma/nma-wifi-dialog.c:1160 ../src/libnm-gtk/nm-wifi-dialog.c:1161
 #, fuzzy, c-format
@@ -5042,4 +5042,4 @@ msgstr "_Type:"
 #~ msgstr "Kunne ikke lage en PAN-tilkobling: %s"
 
 #~ msgid "%s Network"
-#~ msgstr "%s nettverk:"
+#~ msgstr "%s nettverk"
