--- a/po/ne.po
+++ b/po/ne.po
@@ -818,12 +818,12 @@ msgid "Unknown"
 msgstr ""
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "आईपी ठेगाना:"
+msgid "IP Address"
+msgstr "आईपी ठेगाना"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "प्रशारण ठेगाना:"
+msgid "Broadcast Address"
+msgstr "प्रशारण ठेगाना"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -832,8 +832,8 @@ msgid "Unknown"
 msgstr ""
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "सबनेट मास्क:"
+msgid "Subnet Mask"
+msgstr "सबनेट मास्क"
 
 #: ../src/applet-dialogs.c:492
 #, fuzzy, c-format
@@ -864,21 +864,21 @@ msgid "General"
 msgstr ""
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "इन्टरफेस:"
+msgid "Interface"
+msgstr "इन्टरफेस"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "हार्डवेयर ठेगाना:"
+msgid "Hardware Address"
+msgstr "हार्डवेयर ठेगाना"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "ड्राइभर:"
+msgid "Driver"
+msgstr "ड्राइभर"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "गति:"
+msgid "Speed"
+msgstr "गति"
 
 #: ../src/applet-dialogs.c:600
 #, fuzzy
@@ -892,8 +892,8 @@ msgid "IPv4"
 msgstr ""
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "पूर्वनिर्धारित राउट:"
+msgid "Default Route"
+msgstr "पूर्वनिर्धारित राउट"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -907,25 +907,25 @@ msgstr ""
 
 #: ../src/applet-dialogs.c:815
 #, fuzzy
-msgid "VPN Type:"
+msgid "VPN Type"
 msgstr "प्रकार:"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
+msgid "VPN Gateway"
 msgstr ""
 
 #: ../src/applet-dialogs.c:828
 #, fuzzy
-msgid "VPN Username:"
+msgid "VPN Username"
 msgstr "प्रयोगकर्ता नाम:"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
+msgid "VPN Banner"
 msgstr ""
 
 #: ../src/applet-dialogs.c:840
 #, fuzzy
-msgid "Base Connection:"
+msgid "Base Connection"
 msgstr "भीपीएन जडान"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
