--- a/po/oc.po
+++ b/po/oc.po
@@ -844,12 +844,12 @@ msgid "Unknown"
 msgstr "Desconegut"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "Adreça IP :"
+msgid "IP Address"
+msgstr "Adreça IP "
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Adreça de broadcast :"
+msgid "Broadcast Address"
+msgstr "Adreça de broadcast "
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -858,8 +858,8 @@ msgid "Unknown"
 msgstr "Desconegut"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Amagatal de sosret :"
+msgid "Subnet Mask"
+msgstr "Amagatal de sosret "
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -890,21 +890,21 @@ msgid "General"
 msgstr "General"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Interfaç :"
+msgid "Interface"
+msgstr "Interfaç "
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Adreça materiala :"
+msgid "Hardware Address"
+msgstr "Adreça materiala "
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Pilòt :"
+msgid "Driver"
+msgstr "Pilòt "
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Velocitat :"
+msgid "Speed"
+msgstr "Velocitat "
 
 #
 #: ../src/applet-dialogs.c:600
@@ -918,8 +918,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Rota per defaut :"
+msgid "Default Route"
+msgstr "Rota per defaut "
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -932,24 +932,24 @@ msgid "Ignored"
 msgstr "Ignorat"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "Tipe de VPN :"
+msgid "VPN Type"
+msgstr "Tipe de VPN "
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
+msgid "VPN Gateway"
 msgstr "Palanca pel VPN"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "Nom d'utilizaire pel VPN :"
+msgid "VPN Username"
+msgstr "Nom d'utilizaire pel VPN "
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "Bandièra pel VPN :"
+msgid "VPN Banner"
+msgstr "Bandièra pel VPN "
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Connexion de basa :"
+msgid "Base Connection"
+msgstr "Connexion de basa "
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
