--- a/po/pt.po
+++ b/po/pt.po
@@ -835,12 +835,12 @@ msgid "Unknown"
 msgstr "Desconhecido"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "Endereço IP:"
+msgid "IP Address"
+msgstr "Endereço IP"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Endereço de Broadcast:"
+msgid "Broadcast Address"
+msgstr "Endereço de Broadcast"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -849,8 +849,8 @@ msgid "Unknown"
 msgstr "Desconhecido"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Máscara de subrede:"
+msgid "Subnet Mask"
+msgstr "Máscara de subrede"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -881,21 +881,21 @@ msgid "General"
 msgstr "Geral"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Ambiente:"
+msgid "Interface"
+msgstr "Ambiente"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Endereço físico (MAC):"
+msgid "Hardware Address"
+msgstr "Endereço físico (MAC)"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Controlador:"
+msgid "Driver"
+msgstr "Controlador"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Velocidade:"
+msgid "Speed"
+msgstr "Velocidade"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -908,8 +908,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Rota predefinida:"
+msgid "Default Route"
+msgstr "Rota predefinida"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -922,24 +922,24 @@ msgid "Ignored"
 msgstr "Ignorado"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "Tipo de VPN:"
+msgid "VPN Type"
+msgstr "Tipo de VPN"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "Gateway VPN:"
+msgid "VPN Gateway"
+msgstr "Gateway VPN"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "Utilizador VPN:"
+msgid "VPN Username"
+msgstr "Utilizador VPN"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "Anúncio VPN:"
+msgid "VPN Banner"
+msgstr "Anúncio VPN"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Ligação base:"
+msgid "Base Connection"
+msgstr "Ligação base"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
