--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -871,12 +871,12 @@ msgid "Unknown"
 msgstr "Desconhecido"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "Endereço IP:"
+msgid "IP Address"
+msgstr "Endereço IP"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Endereço de broadcast:"
+msgid "Broadcast Address"
+msgstr "Endereço de broadcast"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -885,8 +885,8 @@ msgid "Unknown"
 msgstr "Desconhecido"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Máscara de sub-rede:"
+msgid "Subnet Mask"
+msgstr "Máscara de sub-rede"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -917,21 +917,21 @@ msgid "General"
 msgstr "Geral"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Interface:"
+msgid "Interface"
+msgstr "Interface"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Endereço de hardware:"
+msgid "Hardware Address"
+msgstr "Endereço de hardware"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Driver:"
+msgid "Driver"
+msgstr "Driver"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Velocidade:"
+msgid "Speed"
+msgstr "Velocidade"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -944,8 +944,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Rota padrão:"
+msgid "Default Route"
+msgstr "Rota padrão"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -958,24 +958,24 @@ msgid "Ignored"
 msgstr "Ignorado"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "Tipo de VPN:"
+msgid "VPN Type"
+msgstr "Tipo de VPN"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "Gateway de VPN:"
+msgid "VPN Gateway"
+msgstr "Gateway de VPN"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "Nome de usuário de VPN:"
+msgid "VPN Username"
+msgstr "Nome de usuário de VPN"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "Mensagem VPN:"
+msgid "VPN Banner"
+msgstr "Mensagem VPN"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Conexão base:"
+msgid "Base Connection"
+msgstr "Conexão base"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
