--- a/po/ru.po
+++ b/po/ru.po
@@ -862,12 +862,12 @@ msgid "Unknown"
 msgstr "Неизвестно"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "IP-адрес:"
+msgid "IP Address"
+msgstr "IP-адрес"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Широковещательный адрес:"
+msgid "Broadcast Address"
+msgstr "Широковещательный адрес"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -876,8 +876,8 @@ msgid "Unknown"
 msgstr "Неизвестно"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Маска подсети:"
+msgid "Subnet Mask"
+msgstr "Маска подсети"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -908,21 +908,21 @@ msgid "General"
 msgstr "Основное"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Интерфейс:"
+msgid "Interface"
+msgstr "Интерфейс"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Аппаратный адрес:"
+msgid "Hardware Address"
+msgstr "Аппаратный адрес"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Драйвер:"
+msgid "Driver"
+msgstr "Драйвер"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Скорость:"
+msgid "Speed"
+msgstr "Скорость"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -935,8 +935,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Шлюз по умолчанию:"
+msgid "Default Route"
+msgstr "Шлюз по умолчанию"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -949,24 +949,24 @@ msgid "Ignored"
 msgstr "Игнорируется"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "Тип VPN:"
+msgid "VPN Type"
+msgstr "Тип VPN"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "Шлюз VPN:"
+msgid "VPN Gateway"
+msgstr "Шлюз VPN"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "Имя пользователя VPN:"
+msgid "VPN Username"
+msgstr "Имя пользователя VPN"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "Баннер VPN:"
+msgid "VPN Banner"
+msgstr "Баннер VPN"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Основное соединение:"
+msgid "Base Connection"
+msgstr "Основное соединение"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
