--- a/po/sl.po
+++ b/po/sl.po
@@ -831,12 +831,12 @@ msgid "Unknown"
 msgstr "Neznano"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "Naslov IP:"
+msgid "IP Address"
+msgstr "Naslov IP"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Naslov za razpršeno oddajanje:"
+msgid "Broadcast Address"
+msgstr "Naslov za razpršeno oddajanje"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -845,8 +845,8 @@ msgid "Unknown"
 msgstr "Neznano"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Maska podomrežja:"
+msgid "Subnet Mask"
+msgstr "Maska podomrežja"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -877,21 +877,21 @@ msgid "General"
 msgstr "Splošno"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Vmesnik:"
+msgid "Interface"
+msgstr "Vmesnik"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Naslov strojne opreme:"
+msgid "Hardware Address"
+msgstr "Naslov strojne opreme"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Gonilnik:"
+msgid "Driver"
+msgstr "Gonilnik"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Hitrost:"
+msgid "Speed"
+msgstr "Hitrost"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -904,8 +904,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Privzeta smer:"
+msgid "Default Route"
+msgstr "Privzeta smer"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -918,24 +918,24 @@ msgid "Ignored"
 msgstr "Prezrto"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "Vrsta VPN:"
+msgid "VPN Type"
+msgstr "Vrsta VPN"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "Prehod VPN:"
+msgid "VPN Gateway"
+msgstr "Prehod VPN"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "Uporabniško ime VPN:"
+msgid "VPN Username"
+msgstr "Uporabniško ime VPN"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "Pasica VPN:"
+msgid "VPN Banner"
+msgstr "Pasica VPN"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Osnovna povezava:"
+msgid "Base Connection"
+msgstr "Osnovna povezava"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
