--- a/po/sr.po
+++ b/po/sr.po
@@ -852,12 +852,12 @@ msgid "Unknown"
 msgstr "Непозната"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "ИП адреса:"
+msgid "IP Address"
+msgstr "ИП адреса"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Адреса за емитовање:"
+msgid "Broadcast Address"
+msgstr "Адреса за емитовање"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -866,8 +866,8 @@ msgid "Unknown"
 msgstr "Непозната"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Мрежна маска:"
+msgid "Subnet Mask"
+msgstr "Мрежна маска"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -898,21 +898,21 @@ msgid "General"
 msgstr "Опште"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Уређај:"
+msgid "Interface"
+msgstr "Уређај"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Хардверска адреса:"
+msgid "Hardware Address"
+msgstr "Хардверска адреса"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Драјвер:"
+msgid "Driver"
+msgstr "Драјвер"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Брзина:"
+msgid "Speed"
+msgstr "Брзина"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -925,8 +925,8 @@ msgid "IPv4"
 msgstr "ИПв4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Подразумевана рута:"
+msgid "Default Route"
+msgstr "Подразумевана рута"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -939,24 +939,24 @@ msgid "Ignored"
 msgstr "Занемарено"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "ВПН врста:"
+msgid "VPN Type"
+msgstr "ВПН врста"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "ВПН мрежни пролаз:"
+msgid "VPN Gateway"
+msgstr "ВПН мрежни пролаз"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "ВПН корисничко име:"
+msgid "VPN Username"
+msgstr "ВПН корисничко име"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "ВПН банер:"
+msgid "VPN Banner"
+msgstr "ВПН банер"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Веза основе:"
+msgid "Base Connection"
+msgstr "Веза основе"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
@@ -4368,11 +4368,11 @@ msgstr "_Лозинка „%s“ уверења:"
 
 #: ../src/libnma/nma-pkcs11-cert-chooser-dialog.c:255
 msgid "Error logging in: "
-msgstr "Грешка пријављивања:"
+msgstr "Грешка пријављивања"
 
 #: ../src/libnma/nma-pkcs11-cert-chooser-dialog.c:277
 msgid "Error opening a session: "
-msgstr "Грешка отварања сесије:"
+msgstr "Грешка отварања сесије"
 
 #: ../src/libnma/nma-pkcs11-cert-chooser-dialog.ui.h:1
 msgid "_Unlock token"
