--- a/po/sv.po
+++ b/po/sv.po
@@ -867,12 +867,12 @@ msgid "Unknown"
 msgstr "Okänd"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "IP-adress:"
+msgid "IP Address"
+msgstr "IP-adress"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Broadcast-adress:"
+msgid "Broadcast Address"
+msgstr "Broadcast-adress"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -881,8 +881,8 @@ msgid "Unknown"
 msgstr "Okänd"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Subnätsmask:"
+msgid "Subnet Mask"
+msgstr "Subnätsmask"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -913,21 +913,21 @@ msgid "General"
 msgstr "Allmänt"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Gränssnitt:"
+msgid "Interface"
+msgstr "Gränssnitt"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Hårdvaruadress:"
+msgid "Hardware Address"
+msgstr "Hårdvaruadress"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Drivrutin:"
+msgid "Driver"
+msgstr "Drivrutin"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Hastighet:"
+msgid "Speed"
+msgstr "Hastighet"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -940,8 +940,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Standardväg:"
+msgid "Default Route"
+msgstr "Standardväg"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -954,24 +954,24 @@ msgid "Ignored"
 msgstr "Ignorera"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "VPN-typ:"
+msgid "VPN Type"
+msgstr "VPN-typ"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "VPN-gateway:"
+msgid "VPN Gateway"
+msgstr "VPN-gateway"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "VPN-användarnamn:"
+msgid "VPN Username"
+msgstr "VPN-användarnamn"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "VPN-banner:"
+msgid "VPN Banner"
+msgstr "VPN-banner"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Basanslutning:"
+msgid "Base Connection"
+msgstr "Basanslutning"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
