--- a/po/ta.po
+++ b/po/ta.po
@@ -858,12 +858,12 @@ msgid "Unknown"
 msgstr "தெரியாத"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "IP முகவரி:"
+msgid "IP Address"
+msgstr "IP முகவரி"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "ஒளிப்பரப்பு முகவரி:"
+msgid "Broadcast Address"
+msgstr "ஒளிப்பரப்பு முகவரி"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -872,8 +872,8 @@ msgid "Unknown"
 msgstr "தெரியாத"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "துணை இணைய மறைப்பு:"
+msgid "Subnet Mask"
+msgstr "துணை இணைய மறைப்பு"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -904,21 +904,21 @@ msgid "General"
 msgstr "பொதுவான"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "முகப்பு:"
+msgid "Interface"
+msgstr "முகப்பு"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "வன்பொருள் முகவரி:"
+msgid "Hardware Address"
+msgstr "வன்பொருள் முகவரி"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "இயக்கி:"
+msgid "Driver"
+msgstr "இயக்கி"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "வேகம்:"
+msgid "Speed"
+msgstr "வேகம்"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -931,8 +931,8 @@ msgid "IPv4"
 msgstr "ஐபிவி4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "முன்னிருப்பு வழி:"
+msgid "Default Route"
+msgstr "முன்னிருப்பு வழி"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -945,24 +945,24 @@ msgid "Ignored"
 msgstr "உதாசீனம் செய்யப்பட்டது"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "விபிஎன் வகை:"
+msgid "VPN Type"
+msgstr "விபிஎன் வகை"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "விபிஎன் நுழைவாயில்:"
+msgid "VPN Gateway"
+msgstr "விபிஎன் நுழைவாயில்"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "விபிஎன் பயனர் பெயர்:"
+msgid "VPN Username"
+msgstr "விபிஎன் பயனர் பெயர்"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "விபிஎன் அறிவிப்பு பலகை:"
+msgid "VPN Banner"
+msgstr "விபிஎன் அறிவிப்பு பலகை"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "அடிப்படை இணைப்பு:"
+msgid "Base Connection"
+msgstr "அடிப்படை இணைப்பு"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
@@ -1044,7 +1044,7 @@ msgstr "PIN குறியீடு:"
 #. Translators: Show/obscure PIN checkbox label
 #: ../src/applet-dialogs.c:1346
 msgid "Show PIN code"
-msgstr "PIN குறியீடு காட்டவும்:"
+msgstr "PIN குறியீடு காட்டவும்"
 
 #: ../src/applet-dialogs.c:1348
 msgid "SIM PUK unlock required"
@@ -1082,7 +1082,7 @@ msgstr "புதிய PIN குறியீட்டை மீண்டும
 #. Translators: Show/obscure PIN/PUK checkbox label
 #: ../src/applet-dialogs.c:1363
 msgid "Show PIN/PUK codes"
-msgstr "PIN /PUK குறியீடு காட்டவும்:"
+msgstr "PIN /PUK குறியீடு காட்டவும்"
 
 #: ../src/connection-editor/ce-ip4-routes.ui.h:2
 #: ../src/connection-editor/ce-ip6-routes.ui.h:2
@@ -2994,7 +2994,7 @@ msgstr ""
 
 #: ../src/connection-editor/nm-connection-editor.c:577
 msgid "_Save"
-msgstr "_S சேமிக்கவும்:"
+msgstr "_S சேமிக்கவும்"
 
 #: ../src/connection-editor/nm-connection-editor.c:578
 msgid "Save any changes made to this connection."
