--- a/po/tg.po
+++ b/po/tg.po
@@ -864,12 +864,12 @@ msgid "Unknown"
 msgstr "Номаълум"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "Суроғаи IP:"
+msgid "IP Address"
+msgstr "Суроғаи IP"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Суроғаи пахш:"
+msgid "Broadcast Address"
+msgstr "Суроғаи пахш"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -879,7 +879,7 @@ msgstr "Номаълум"
 
 #: ../src/applet-dialogs.c:382
 #, fuzzy
-msgid "Subnet Mask:"
+msgid "Subnet Mask"
 msgstr "Маскаи зершабака"
 
 #: ../src/applet-dialogs.c:492
@@ -911,21 +911,21 @@ msgid "General"
 msgstr "Умумӣ"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Интерфейс:"
+msgid "Interface"
+msgstr "Интерфейс"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Суроғаи сахтафзор:"
+msgid "Hardware Address"
+msgstr "Суроғаи сахтафзор"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Драйвер:"
+msgid "Driver"
+msgstr "Драйвер"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Суръат:"
+msgid "Speed"
+msgstr "Суръат"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -939,7 +939,7 @@ msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
 #, fuzzy
-msgid "Default Route:"
+msgid "Default Route"
 msgstr "Масири пешфарз"
 
 #. --- IPv6 ---
@@ -953,24 +953,24 @@ msgid "Ignored"
 msgstr "Радшуда"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "Навъи VPN:"
+msgid "VPN Type"
+msgstr "Навъи VPN"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "Шлюзи VPN:"
+msgid "VPN Gateway"
+msgstr "Шлюзи VPN"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "Номи корбари VPN:"
+msgid "VPN Username"
+msgstr "Номи корбари VPN"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "Баннери VPN:"
+msgid "VPN Banner"
+msgstr "Баннери VPN"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Пайвасти асосӣ:"
+msgid "Base Connection"
+msgstr "Пайвасти асосӣ"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
