--- a/po/th.po
+++ b/po/th.po
@@ -829,12 +829,12 @@ msgid "Unknown"
 msgstr "ไม่มีข้อมูล"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "ที่อยู่ไอพี:"
+msgid "IP Address"
+msgstr "ที่อยู่ไอพี"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "ที่อยู่บรอดแคสต์:"
+msgid "Broadcast Address"
+msgstr "ที่อยู่บรอดแคสต์"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -843,8 +843,8 @@ msgid "Unknown"
 msgstr "ไม่มีข้อมูล"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "ซับเน็ตแมสก์:"
+msgid "Subnet Mask"
+msgstr "ซับเน็ตแมสก์"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -875,21 +875,21 @@ msgid "General"
 msgstr "ทั่วไป"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "อินเทอร์เฟซ:"
+msgid "Interface"
+msgstr "อินเทอร์เฟซ"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "หมายเลขฮาร์ดแวร์:"
+msgid "Hardware Address"
+msgstr "หมายเลขฮาร์ดแวร์"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "ไดรเวอร์:"
+msgid "Driver"
+msgstr "ไดรเวอร์"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "ความเร็ว:"
+msgid "Speed"
+msgstr "ความเร็ว"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -902,8 +902,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "เส้นทางปริยาย:"
+msgid "Default Route"
+msgstr "เส้นทางปริยาย"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -916,24 +916,24 @@ msgid "Ignored"
 msgstr "ไม่ใช้"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "ชนิด VPN:"
+msgid "VPN Type"
+msgstr "ชนิด VPN"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "เกตเวย์ VPN:"
+msgid "VPN Gateway"
+msgstr "เกตเวย์ VPN"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "ชื่อผู้ใช้ VPN:"
+msgid "VPN Username"
+msgstr "ชื่อผู้ใช้ VPN"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "ข้อความต้อนรับของ VPN:"
+msgid "VPN Banner"
+msgstr "ข้อความต้อนรับของ VPN"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "การเชื่อมต่อฐาน:"
+msgid "Base Connection"
+msgstr "การเชื่อมต่อฐาน"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
@@ -2712,7 +2712,7 @@ msgstr ""
 
 #: ../src/connection-editor/ce-ppp-auth-methods.ui.h:3
 msgid "Allowed Authentication Methods"
-msgstr "วิธียืนยันตัวบุคคลที่เปิดใช้:"
+msgstr "วิธียืนยันตัวบุคคลที่เปิดใช้"
 
 #: ../src/connection-editor/ce-ppp-auth-methods.ui.h:4
 msgid "_EAP"
