--- a/po/tr.po
+++ b/po/tr.po
@@ -861,12 +861,12 @@ msgid "Unknown"
 msgstr "Bilinmeyen"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "IP Adresi:"
+msgid "IP Address"
+msgstr "IP Adresi"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Broadcast Adresi:"
+msgid "Broadcast Address"
+msgstr "Broadcast Adresi"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -875,8 +875,8 @@ msgid "Unknown"
 msgstr "Bilinmeyen"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Alt Ağ Maskesi:"
+msgid "Subnet Mask"
+msgstr "Alt Ağ Maskesi"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -907,21 +907,21 @@ msgid "General"
 msgstr "Genel"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Arayüz:"
+msgid "Interface"
+msgstr "Arayüz"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Donanım Adresi:"
+msgid "Hardware Address"
+msgstr "Donanım Adresi"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Sürücü:"
+msgid "Driver"
+msgstr "Sürücü"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Hız:"
+msgid "Speed"
+msgstr "Hız"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -934,8 +934,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Öntanımlı Rota:"
+msgid "Default Route"
+msgstr "Öntanımlı Rota"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -948,24 +948,24 @@ msgid "Ignored"
 msgstr "Yok sayılmış"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "VPN Türü:"
+msgid "VPN Type"
+msgstr "VPN Türü"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "VPN Geçidi:"
+msgid "VPN Gateway"
+msgstr "VPN Geçidi"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "VPN Kullanıcı Adı:"
+msgid "VPN Username"
+msgstr "VPN Kullanıcı Adı"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "VPN Afişi:"
+msgid "VPN Banner"
+msgstr "VPN Afişi"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Temel Bağlantı:"
+msgid "Base Connection"
+msgstr "Temel Bağlantı"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
