--- a/po/ur.po
+++ b/po/ur.po
@@ -859,12 +859,12 @@ msgid "Unknown"
 msgstr "نامعلوم"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "آئی پی پتہ:"
+msgid "IP Address"
+msgstr "آئی پی پتہ"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "نشریہ پتہ:"
+msgid "Broadcast Address"
+msgstr "نشریہ پتہ"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -874,8 +874,8 @@ msgid "Unknown"
 msgstr "نامعلوم"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "سب-نیٹ ماسک:"
+msgid "Subnet Mask"
+msgstr "سب-نیٹ ماسک"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -906,21 +906,21 @@ msgid "General"
 msgstr ""
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "مواجہ:"
+msgid "Interface"
+msgstr "مواجہ"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "ہارڈویئر پتہ:"
+msgid "Hardware Address"
+msgstr "ہارڈویئر پتہ"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "ڈرائیور:"
+msgid "Driver"
+msgstr "ڈرائیور"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "رفتار:"
+msgid "Speed"
+msgstr "رفتار"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -933,8 +933,8 @@ msgid "IPv4"
 msgstr ""
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "طے شدہ راؤٹ:"
+msgid "Default Route"
+msgstr "طے شدہ راؤٹ"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -949,26 +949,26 @@ msgstr "نظر انداز کریں"
 
 #: ../src/applet-dialogs.c:815
 #, fuzzy
-msgid "VPN Type:"
+msgid "VPN Type"
 msgstr "Schlüsseltyp:"
 
 #: ../src/applet-dialogs.c:822
 #, fuzzy
-msgid "VPN Gateway:"
+msgid "VPN Gateway"
 msgstr "گیٹ وے"
 
 #: ../src/applet-dialogs.c:828
 #, fuzzy
-msgid "VPN Username:"
+msgid "VPN Username"
 msgstr "صا_رف کا نام:"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
+msgid "VPN Banner"
 msgstr ""
 
 #: ../src/applet-dialogs.c:840
 #, fuzzy
-msgid "Base Connection:"
+msgid "Base Connection"
 msgstr "ا_تصال:"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
