--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -851,12 +851,12 @@ msgid "Unknown"
 msgstr "未知"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "IP 地址："
+msgid "IP Address"
+msgstr "IP 地址"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "广播地址："
+msgid "Broadcast Address"
+msgstr "广播地址"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -865,8 +865,8 @@ msgid "Unknown"
 msgstr "未知"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "子网掩码："
+msgid "Subnet Mask"
+msgstr "子网掩码"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -897,21 +897,21 @@ msgid "General"
 msgstr "常规"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "接口："
+msgid "Interface"
+msgstr "接口"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "硬件地址："
+msgid "Hardware Address"
+msgstr "硬件地址"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "驱动程序："
+msgid "Driver"
+msgstr "驱动程序"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "速度："
+msgid "Speed"
+msgstr "速度"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -924,8 +924,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "默认路由："
+msgid "Default Route"
+msgstr "默认路由"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -938,24 +938,24 @@ msgid "Ignored"
 msgstr "已忽略"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "VPN 类型："
+msgid "VPN Type"
+msgstr "VPN 类型"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "VPN 网关："
+msgid "VPN Gateway"
+msgstr "VPN 网关"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "VPN 用户名："
+msgid "VPN Username"
+msgstr "VPN 用户名"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "VPN Banner："
+msgid "VPN Banner"
+msgstr "VPN Banner"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "基本连接："
+msgid "Base Connection"
+msgstr "基本连接"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
@@ -1069,7 +1069,7 @@ msgstr "再次输入新的 PIN 码："
 #. Translators: Show/obscure PIN/PUK checkbox label
 #: ../src/applet-dialogs.c:1389
 msgid "Show PIN/PUK codes"
-msgstr "显示 PIN/PUK 码："
+msgstr "显示 PIN/PUK 码"
 
 #: ../src/applet-vpn-request.c:201
 #, fuzzy
@@ -1506,7 +1506,7 @@ msgstr "Willing"
 
 #: ../src/connection-editor/ce-page-dcb.ui.h:10
 msgid "Priority"
-msgstr "优先级："
+msgstr "优先级"
 
 #: ../src/connection-editor/ce-page-dcb.ui.h:11
 #, fuzzy
