--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -816,12 +816,12 @@ msgid "Unknown"
 msgstr "不明"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "IP 位址："
+msgid "IP Address"
+msgstr "IP 位址"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "廣播位址："
+msgid "Broadcast Address"
+msgstr "廣播位址"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -830,8 +830,8 @@ msgid "Unknown"
 msgstr "不明"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "子網絡遮罩："
+msgid "Subnet Mask"
+msgstr "子網絡遮罩"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -862,21 +862,21 @@ msgid "General"
 msgstr "一般"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "介面："
+msgid "Interface"
+msgstr "介面"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "硬件位址："
+msgid "Hardware Address"
+msgstr "硬件位址"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "驅動程式："
+msgid "Driver"
+msgstr "驅動程式"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "速度："
+msgid "Speed"
+msgstr "速度"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -889,8 +889,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "預設路由："
+msgid "Default Route"
+msgstr "預設路由"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -903,24 +903,24 @@ msgid "Ignored"
 msgstr "已忽略"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "VPN 類型："
+msgid "VPN Type"
+msgstr "VPN 類型"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "VPN 閘道器："
+msgid "VPN Gateway"
+msgstr "VPN 閘道器"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "VPN 使用者名稱："
+msgid "VPN Username"
+msgstr "VPN 使用者名稱"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "VPN 旗幟："
+msgid "VPN Banner"
+msgstr "VPN 旗幟"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "基礎連線："
+msgid "Base Connection"
+msgstr "基礎連線"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
