--- a/po/crh.po
+++ b/po/crh.po
@@ -841,13 +841,13 @@ msgid "Unknown"
 msgstr "Namalüm"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "İP Adresi:"
+msgid "IP Address"
+msgstr "İP Adresi"
 
 # tüklü
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Yayın Adresi:"
+msgid "Broadcast Address"
+msgstr "Yayın Adresi"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -856,8 +856,8 @@ msgid "Unknown"
 msgstr "Namalüm"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Alt-şebeke Maskası:"
+msgid "Subnet Mask"
+msgstr "Alt-şebeke Maskası"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -888,21 +888,21 @@ msgid "General"
 msgstr "Umumiy"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Arayüz:"
+msgid "Interface"
+msgstr "Arayüz"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Donanım Adresi:"
+msgid "Hardware Address"
+msgstr "Donanım Adresi"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Sürüci:"
+msgid "Driver"
+msgstr "Sürüci"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Sur'at:"
+msgid "Speed"
+msgstr "Sur'at"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -915,8 +915,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Öntanımlı Rota:"
+msgid "Default Route"
+msgstr "Öntanımlı Rota"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -929,25 +929,25 @@ msgid "Ignored"
 msgstr "İhmal Etilgen"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "VPN Türu:"
+msgid "VPN Type"
+msgstr "VPN Türu"
 
 # tüklü
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "VPN Savağı:"
+msgid "VPN Gateway"
+msgstr "VPN Savağı"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "VPN Qullanıcı Adı:"
+msgid "VPN Username"
+msgstr "VPN Qullanıcı Adı"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "VPN Afişi:"
+msgid "VPN Banner"
+msgstr "VPN Afişi"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Temel Bağlantı:"
+msgid "Base Connection"
+msgstr "Temel Bağlantı"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
