--- a/po/cs.po
+++ b/po/cs.po
@@ -846,12 +846,12 @@ msgid "Unknown"
 msgstr "Neznámá"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "Adresa IP:"
+msgid "IP Address"
+msgstr "Adresa IP"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Adresa všesměrového vysílání:"
+msgid "Broadcast Address"
+msgstr "Adresa všesměrového vysílání"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -860,8 +860,8 @@ msgid "Unknown"
 msgstr "Neznámá"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Maska podsítě:"
+msgid "Subnet Mask"
+msgstr "Maska podsítě"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -892,21 +892,21 @@ msgid "General"
 msgstr "Obecné"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Rozhraní:"
+msgid "Interface"
+msgstr "Rozhraní"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Hardwarová adresa:"
+msgid "Hardware Address"
+msgstr "Hardwarová adresa"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Ovladač:"
+msgid "Driver"
+msgstr "Ovladač"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Rychlost:"
+msgid "Speed"
+msgstr "Rychlost"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -919,8 +919,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Výchozí trasa:"
+msgid "Default Route"
+msgstr "Výchozí trasa"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -933,24 +933,24 @@ msgid "Ignored"
 msgstr "Ignorováno"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "Typ VPN:"
+msgid "VPN Type"
+msgstr "Typ VPN"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "Brána VPN:"
+msgid "VPN Gateway"
+msgstr "Brána VPN"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "Uživatelské jméno VPN:"
+msgid "VPN Username"
+msgstr "Uživatelské jméno VPN"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "Úvodní text VPN:"
+msgid "VPN Banner"
+msgstr "Úvodní text VPN"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Základní připojení:"
+msgid "Base Connection"
+msgstr "Základní připojení"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
@@ -1446,12 +1446,12 @@ msgstr "neplatná %s (%s)"
 #: ../src/connection-editor/ce-page.c:388
 #, c-format
 msgid "invalid interface-name for %s (%s): "
-msgstr "neplatný název rozhraní pro %s (%s):"
+msgstr "neplatný název rozhraní pro %s (%s)"
 
 #: ../src/connection-editor/ce-page.c:392
 #, c-format
 msgid "invalid interface-name (%s): "
-msgstr "neplatný název rozhraní (%s):"
+msgstr "neplatný název rozhraní (%s)"
 
 #: ../src/connection-editor/ce-page.c:571
 msgid "can’t parse device name"
