--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -814,12 +814,12 @@ msgid "Unknown"
 msgstr ""
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "IP Address:"
+msgid "IP Address"
+msgstr "IP Address"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Broadcast Address:"
+msgid "Broadcast Address"
+msgstr "Broadcast Address"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -828,8 +828,8 @@ msgid "Unknown"
 msgstr ""
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Subnet Mask:"
+msgid "Subnet Mask"
+msgstr "Subnet Mask"
 
 #: ../src/applet-dialogs.c:492
 #, fuzzy, c-format
@@ -860,20 +860,20 @@ msgid "General"
 msgstr ""
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Interface:"
+msgid "Interface"
+msgstr "Interface"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Hardware Address:"
+msgid "Hardware Address"
+msgstr "Hardware Address"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Driver:"
+msgid "Driver"
+msgstr "Driver"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
+msgid "Speed"
 msgstr ""
 
 #: ../src/applet-dialogs.c:600
@@ -888,8 +888,8 @@ msgid "IPv4"
 msgstr ""
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Default Route:"
+msgid "Default Route"
+msgstr "Default Route"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -903,25 +903,25 @@ msgstr ""
 
 #: ../src/applet-dialogs.c:815
 #, fuzzy
-msgid "VPN Type:"
+msgid "VPN Type"
 msgstr "Type:"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
+msgid "VPN Gateway"
 msgstr ""
 
 #: ../src/applet-dialogs.c:828
 #, fuzzy
-msgid "VPN Username:"
+msgid "VPN Username"
 msgstr "User Name:"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
+msgid "VPN Banner"
 msgstr ""
 
 #: ../src/applet-dialogs.c:840
 #, fuzzy
-msgid "Base Connection:"
+msgid "Base Connection"
 msgstr "VPN Connections"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
