--- a/po/es.po
+++ b/po/es.po
@@ -867,12 +867,12 @@ msgid "Unknown"
 msgstr "Desconocida"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "Dirección IP:"
+msgid "IP Address"
+msgstr "Dirección IP"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Dirección de difusión:"
+msgid "Broadcast Address"
+msgstr "Dirección de difusión"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -881,8 +881,8 @@ msgid "Unknown"
 msgstr "Desconocida"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Máscara de subred:"
+msgid "Subnet Mask"
+msgstr "Máscara de subred"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -913,21 +913,21 @@ msgid "General"
 msgstr "General"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Interfaz:"
+msgid "Interface"
+msgstr "Interfaz"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Dirección hardware:"
+msgid "Hardware Address"
+msgstr "Dirección hardware"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Controlador:"
+msgid "Driver"
+msgstr "Controlador"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Velocidad:"
+msgid "Speed"
+msgstr "Velocidad"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -940,8 +940,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Ruta predeterminada:"
+msgid "Default Route"
+msgstr "Ruta predeterminada"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -954,24 +954,24 @@ msgid "Ignored"
 msgstr "Ignorado"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "Tipo de VPN:"
+msgid "VPN Type"
+msgstr "Tipo de VPN"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "Puerta de enlace VPN:"
+msgid "VPN Gateway"
+msgstr "Puerta de enlace VPN"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "Nombre del usuario VPN:"
+msgid "VPN Username"
+msgstr "Nombre del usuario VPN"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "Mensaje VPN:"
+msgid "VPN Banner"
+msgstr "Mensaje VPN"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Conexión base:"
+msgid "Base Connection"
+msgstr "Conexión base"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
@@ -1314,7 +1314,7 @@ msgstr ""
 #: ../src/connection-editor/ce-page-wifi.ui.h:8
 #| msgid "_MTU:"
 msgid "_MTU"
-msgstr "_MTU::"
+msgstr "_MTU"
 
 #: ../src/connection-editor/ce-page-bond.ui.h:26
 #: ../src/connection-editor/ce-page-ethernet.ui.h:18
@@ -3272,7 +3272,7 @@ msgstr "_Abrir"
 
 #: ../src/connection-editor/connection-helpers.c:340
 msgid "Hardware"
-msgstr "Dirección hardware:"
+msgstr "Dirección hardware"
 
 #: ../src/connection-editor/connection-helpers.c:367
 msgid "Virtual"
@@ -4275,7 +4275,7 @@ msgstr "contraseña de _clave %s:"
 #, c-format
 #| msgid "Choose CA Certificate"
 msgid "Choose %s Certificate"
-msgstr "Elija un certificado %s:"
+msgstr "Elija un certificado %s"
 
 #: ../src/libnma/nma-file-cert-chooser.c:262
 #: ../src/libnma/nma-pkcs11-cert-chooser.c:386
