--- a/po/eu.po
+++ b/po/eu.po
@@ -838,12 +838,12 @@ msgid "Unknown"
 msgstr "Ezezaguna"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "IP helbidea:"
+msgid "IP Address"
+msgstr "IP helbidea"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Difusio-helbidea:"
+msgid "Broadcast Address"
+msgstr "Difusio-helbidea"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -852,8 +852,8 @@ msgid "Unknown"
 msgstr "Ezezaguna"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Azpisare-maskara:"
+msgid "Subnet Mask"
+msgstr "Azpisare-maskara"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -884,21 +884,21 @@ msgid "General"
 msgstr "Orokorra"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Interfazea:"
+msgid "Interface"
+msgstr "Interfazea"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Hardwarearen helbidea:"
+msgid "Hardware Address"
+msgstr "Hardwarearen helbidea"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Kontrolatzailea:"
+msgid "Driver"
+msgstr "Kontrolatzailea"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Abiadura:"
+msgid "Speed"
+msgstr "Abiadura"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -911,8 +911,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Bide lehenetsia:"
+msgid "Default Route"
+msgstr "Bide lehenetsia"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -925,24 +925,24 @@ msgid "Ignored"
 msgstr "Ez ikusi eginda"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "VPN mota:"
+msgid "VPN Type"
+msgstr "VPN mota"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "VPNren atebidea:"
+msgid "VPN Gateway"
+msgstr "VPNren atebidea"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "VPNren erabiltzaile-izena:"
+msgid "VPN Username"
+msgstr "VPNren erabiltzaile-izena"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "VPNren iragarkia:"
+msgid "VPN Banner"
+msgstr "VPNren iragarkia"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Oinarrizko konexioa:"
+msgid "Base Connection"
+msgstr "Oinarrizko konexioa"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
