--- a/po/gu.po
+++ b/po/gu.po
@@ -831,12 +831,12 @@ msgid "Unknown"
 msgstr "અજ્ઞાત"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "IP સરનામું:"
+msgid "IP Address"
+msgstr "IP સરનામું"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "બ્રોડકાસ્ટ સરનામું:"
+msgid "Broadcast Address"
+msgstr "બ્રોડકાસ્ટ સરનામું"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -845,8 +845,8 @@ msgid "Unknown"
 msgstr "અજ્ઞાત"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "સબનેટ માસ્ક:"
+msgid "Subnet Mask"
+msgstr "સબનેટ માસ્ક"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -877,21 +877,21 @@ msgid "General"
 msgstr "સામાન્ય"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "ઇન્ટરફેસ:"
+msgid "Interface"
+msgstr "ઇન્ટરફેસ"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "હાર્ડવેર સરનામું:"
+msgid "Hardware Address"
+msgstr "હાર્ડવેર સરનામું"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "ડ્રાઇવર:"
+msgid "Driver"
+msgstr "ડ્રાઇવર"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "ઝડપ:"
+msgid "Speed"
+msgstr "ઝડપ"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -904,8 +904,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "મૂળભૂત માર્ગ:"
+msgid "Default Route"
+msgstr "મૂળભૂત માર્ગ"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -918,24 +918,24 @@ msgid "Ignored"
 msgstr "અવગણેલ"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "VPN પ્રકાર:"
+msgid "VPN Type"
+msgstr "VPN પ્રકાર"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "VPN ગેટવે:"
+msgid "VPN Gateway"
+msgstr "VPN ગેટવે"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "VPN વપરાશકર્તાનામ:"
+msgid "VPN Username"
+msgstr "VPN વપરાશકર્તાનામ"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "VPN બૅનર:"
+msgid "VPN Banner"
+msgstr "VPN બૅનર"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "આધાર જોડાણ:"
+msgid "Base Connection"
+msgstr "આધાર જોડાણ"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
@@ -2049,7 +2049,7 @@ msgstr "પાસવર્ડોને બતાવો (_w)"
 
 #: ../src/connection-editor/ce-page-ppp.ui.h:1
 msgid "Authentication"
-msgstr "સત્તાધિકરણ:"
+msgstr "સત્તાધિકરણ"
 
 #: ../src/connection-editor/ce-page-ppp.ui.h:2
 msgid "Allowed methods:"
