--- a/po/is.po
+++ b/po/is.po
@@ -845,12 +845,12 @@ msgid "Unknown"
 msgstr "Óþekkt"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "IP vistfang:"
+msgid "IP Address"
+msgstr "IP vistfang"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Útvörpunarvistfang:"
+msgid "Broadcast Address"
+msgstr "Útvörpunarvistfang"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -859,8 +859,8 @@ msgid "Unknown"
 msgstr "Óþekkt"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Undirnetssía:"
+msgid "Subnet Mask"
+msgstr "Undirnetssía"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -891,21 +891,21 @@ msgid "General"
 msgstr "Almennt"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Tengi:"
+msgid "Interface"
+msgstr "Tengi"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Vistfang vélbúnaðar:"
+msgid "Hardware Address"
+msgstr "Vistfang vélbúnaðar"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Drif:"
+msgid "Driver"
+msgstr "Drif"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Hraði:"
+msgid "Speed"
+msgstr "Hraði"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -918,8 +918,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Sjálfgefin tengileið (route):"
+msgid "Default Route"
+msgstr "Sjálfgefin tengileið (route)"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -932,24 +932,24 @@ msgid "Ignored"
 msgstr "Hunsað"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "Tegund VPN:"
+msgid "VPN Type"
+msgstr "Tegund VPN"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "VPN-netgátt (gateway):"
+msgid "VPN Gateway"
+msgstr "VPN-netgátt (gateway)"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "VPN-notandanafn:"
+msgid "VPN Username"
+msgstr "VPN-notandanafn"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "VPN tilkynningaborði (banner):"
+msgid "VPN Banner"
+msgstr "VPN tilkynningaborði (banner)"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Grunntenging:"
+msgid "Base Connection"
+msgstr "Grunntenging"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
