--- a/po/mk.po
+++ b/po/mk.po
@@ -863,12 +863,12 @@ msgid "Unknown"
 msgstr "Непознато"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "IP Адреса:"
+msgid "IP Address"
+msgstr "IP Адреса"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Адреса за емитување:"
+msgid "Broadcast Address"
+msgstr "Адреса за емитување"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -877,8 +877,8 @@ msgid "Unknown"
 msgstr "Непознато"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Мрежна маска:"
+msgid "Subnet Mask"
+msgstr "Мрежна маска"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -909,21 +909,21 @@ msgid "General"
 msgstr "Општо"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Уред:"
+msgid "Interface"
+msgstr "Уред"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Хардверска адреса:"
+msgid "Hardware Address"
+msgstr "Хардверска адреса"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Драјвер:"
+msgid "Driver"
+msgstr "Драјвер"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Брзина:"
+msgid "Speed"
+msgstr "Брзина"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -936,8 +936,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Стандардна насока:"
+msgid "Default Route"
+msgstr "Стандардна насока"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -950,24 +950,24 @@ msgid "Ignored"
 msgstr "Игнорирано"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "Тип на VPN:"
+msgid "VPN Type"
+msgstr "Тип на VPN"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "VPN премин:"
+msgid "VPN Gateway"
+msgstr "VPN премин"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "Корисничко име за VPN:"
+msgid "VPN Username"
+msgstr "Корисничко име за VPN"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "VPN банер:"
+msgid "VPN Banner"
+msgstr "VPN банер"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Основна врска:"
+msgid "Base Connection"
+msgstr "Основна врска"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
@@ -4047,7 +4047,7 @@ msgstr "Мојот оператор користи CDMA технологија (
 #: ../src/libnma/nma-mobile-wizard.c:791
 #: ../src/libnm-gtk/nm-mobile-wizard.c:792
 msgid "Choose your Provider"
-msgstr "Изберете го Вашиот оператор:"
+msgstr "Изберете го Вашиот оператор"
 
 #: ../src/libnma/nma-mobile-wizard.c:1053
 #: ../src/libnm-gtk/nm-mobile-wizard.c:1054
