--- a/po/or.po
+++ b/po/or.po
@@ -848,12 +848,12 @@ msgid "Unknown"
 msgstr "ଅଜଣା"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "IP ଠିକଣା:"
+msgid "IP Address"
+msgstr "IP ଠିକଣା"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "ବ୍ରୋଡକାଷ୍ଟ ଠିକଣା:"
+msgid "Broadcast Address"
+msgstr "ବ୍ରୋଡକାଷ୍ଟ ଠିକଣା"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -863,8 +863,8 @@ msgid "Unknown"
 msgstr "ଅଜଣା"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "ସବନେଟ ମାସ୍କ:"
+msgid "Subnet Mask"
+msgstr "ସବନେଟ ମାସ୍କ"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -895,21 +895,21 @@ msgid "General"
 msgstr "ସାଧାରଣ"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "ଅନ୍ତରାପୃଷ୍ଠ:"
+msgid "Interface"
+msgstr "ଅନ୍ତରାପୃଷ୍ଠ"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "ହାର୍ଡୱେର ଠିକଣା:"
+msgid "Hardware Address"
+msgstr "ହାର୍ଡୱେର ଠିକଣା"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "ଚାଳକ:"
+msgid "Driver"
+msgstr "ଚାଳକ"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "ବେଗ:"
+msgid "Speed"
+msgstr "ବେଗ"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -922,8 +922,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "ପୂର୍ବନିର୍ଦ୍ଧାରିତ ପଥ:"
+msgid "Default Route"
+msgstr "ପୂର୍ବନିର୍ଦ୍ଧାରିତ ପଥ"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -937,26 +937,26 @@ msgstr "ଆଗ୍ରହ୍ଯ କରିଦିଅନ୍ତୁ"
 
 #: ../src/applet-dialogs.c:815
 #, fuzzy
-msgid "VPN Type:"
+msgid "VPN Type"
 msgstr "ପ୍ରକାର (_T):"
 
 #: ../src/applet-dialogs.c:822
 #, fuzzy
-msgid "VPN Gateway:"
+msgid "VPN Gateway"
 msgstr "ପ୍ରବେଶ ଦ୍ୱାର"
 
 #: ../src/applet-dialogs.c:828
 #, fuzzy
-msgid "VPN Username:"
+msgid "VPN Username"
 msgstr "ଚାଳକ ନାମ (_U):"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
+msgid "VPN Banner"
 msgstr ""
 
 #: ../src/applet-dialogs.c:840
 #, fuzzy
-msgid "Base Connection:"
+msgid "Base Connection"
 msgstr "ସଂଯୋଗ (_n):"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
