--- a/po/pl.po
+++ b/po/pl.po
@@ -859,12 +859,12 @@ msgid "Unknown"
 msgstr "Nieznany"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "Adres IP:"
+msgid "IP Address"
+msgstr "Adres IP"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Adres rozgłoszeniowy:"
+msgid "Broadcast Address"
+msgstr "Adres rozgłoszeniowy"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -873,8 +873,8 @@ msgid "Unknown"
 msgstr "Nieznana"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Maska podsieci:"
+msgid "Subnet Mask"
+msgstr "Maska podsieci"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -905,21 +905,21 @@ msgid "General"
 msgstr "Ogólne"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Interfejs:"
+msgid "Interface"
+msgstr "Interfejs"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Adres sprzętowy:"
+msgid "Hardware Address"
+msgstr "Adres sprzętowy"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Sterownik:"
+msgid "Driver"
+msgstr "Sterownik"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Prędkość:"
+msgid "Speed"
+msgstr "Prędkość"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -932,8 +932,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Domyślna trasa:"
+msgid "Default Route"
+msgstr "Domyślna trasa"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -946,24 +946,24 @@ msgid "Ignored"
 msgstr "Ignorowanie"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "Typ VPN:"
+msgid "VPN Type"
+msgstr "Typ VPN"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "Brama VPN:"
+msgid "VPN Gateway"
+msgstr "Brama VPN"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "Nazwa użytkownika VPN:"
+msgid "VPN Username"
+msgstr "Nazwa użytkownika VPN"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "Baner VPN:"
+msgid "VPN Banner"
+msgstr "Baner VPN"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Podstawowe połączenie:"
+msgid "Base Connection"
+msgstr "Podstawowe połączenie"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
