--- a/po/ro.po
+++ b/po/ro.po
@@ -820,12 +820,12 @@ msgid "Unknown"
 msgstr "Necunoscută"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "Adresă IP:"
+msgid "IP Address"
+msgstr "Adresă IP"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Adresă broadcast:"
+msgid "Broadcast Address"
+msgstr "Adresă broadcast"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -834,8 +834,8 @@ msgid "Unknown"
 msgstr "Necunoscută"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Mască subrețea:"
+msgid "Subnet Mask"
+msgstr "Mască subrețea"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -864,21 +864,21 @@ msgid "General"
 msgstr "General"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Interfață:"
+msgid "Interface"
+msgstr "Interfață"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Adresă fizică:"
+msgid "Hardware Address"
+msgstr "Adresă fizică"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Driver:"
+msgid "Driver"
+msgstr "Driver"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Viteză:"
+msgid "Speed"
+msgstr "Viteză"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -890,8 +890,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Rută implicită:"
+msgid "Default Route"
+msgstr "Rută implicită"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -903,24 +903,24 @@ msgid "Ignored"
 msgstr "Ignorat"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "Tip VPN:"
+msgid "VPN Type"
+msgstr "Tip VPN"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "Gateway VPN:"
+msgid "VPN Gateway"
+msgstr "Gateway VPN"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "Nume utilizator VPN:"
+msgid "VPN Username"
+msgstr "Nume utilizator VPN"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "Baner VPN:"
+msgid "VPN Banner"
+msgstr "Baner VPN"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Conexiune de bază:"
+msgid "Base Connection"
+msgstr "Conexiune de bază"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
