--- a/po/rw.po
+++ b/po/rw.po
@@ -800,11 +800,11 @@ msgid "Unknown"
 msgstr ""
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
+msgid "IP Address"
 msgstr ""
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
+msgid "Broadcast Address"
 msgstr ""
 
 #. Prefix
@@ -814,7 +814,7 @@ msgid "Unknown"
 msgstr ""
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
+msgid "Subnet Mask"
 msgstr ""
 
 #: ../src/applet-dialogs.c:492
@@ -846,20 +846,20 @@ msgid "General"
 msgstr ""
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
+msgid "Interface"
 msgstr ""
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
+msgid "Hardware Address"
 msgstr ""
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
+msgid "Driver"
 msgstr ""
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
+msgid "Speed"
 msgstr ""
 
 #: ../src/applet-dialogs.c:600
@@ -873,7 +873,7 @@ msgid "IPv4"
 msgstr ""
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
+msgid "Default Route"
 msgstr ""
 
 #. --- IPv6 ---
@@ -892,23 +892,23 @@ msgstr ""
 # sw/source\ui\misc\srtdlg.src:DLG_SORTING.FT_KEYTYP.text
 #: ../src/applet-dialogs.c:815
 #, fuzzy
-msgid "VPN Type:"
+msgid "VPN Type"
 msgstr "Ubwoko bw'agakandisho"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
+msgid "VPN Gateway"
 msgstr ""
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
+msgid "VPN Username"
 msgstr ""
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
+msgid "VPN Banner"
 msgstr ""
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
+msgid "Base Connection"
 msgstr ""
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
