--- a/po/sq.po
+++ b/po/sq.po
@@ -787,11 +787,11 @@ msgid "Unknown"
 msgstr ""
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
+msgid "IP Address"
 msgstr ""
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
+msgid "Broadcast Address"
 msgstr ""
 
 #. Prefix
@@ -801,7 +801,7 @@ msgid "Unknown"
 msgstr ""
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
+msgid "Subnet Mask"
 msgstr ""
 
 #: ../src/applet-dialogs.c:492
@@ -833,20 +833,20 @@ msgid "General"
 msgstr ""
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
+msgid "Interface"
 msgstr ""
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
+msgid "Hardware Address"
 msgstr ""
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
+msgid "Driver"
 msgstr ""
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
+msgid "Speed"
 msgstr ""
 
 #: ../src/applet-dialogs.c:600
@@ -860,7 +860,7 @@ msgid "IPv4"
 msgstr ""
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
+msgid "Default Route"
 msgstr ""
 
 #. --- IPv6 ---
@@ -874,24 +874,24 @@ msgid "Ignored"
 msgstr ""
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
+msgid "VPN Type"
 msgstr ""
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
+msgid "VPN Gateway"
 msgstr ""
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
+msgid "VPN Username"
 msgstr ""
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
+msgid "VPN Banner"
 msgstr ""
 
 #: ../src/applet-dialogs.c:840
 #, fuzzy
-msgid "Base Connection:"
+msgid "Base Connection"
 msgstr "Lidhjet e rrjetit"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
