--- a/po/uk.po
+++ b/po/uk.po
@@ -842,12 +842,12 @@ msgid "Unknown"
 msgstr "Невідома"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "Адреса IP:"
+msgid "IP Address"
+msgstr "Адреса IP"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Широкомовна адреса:"
+msgid "Broadcast Address"
+msgstr "Широкомовна адреса"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -856,8 +856,8 @@ msgid "Unknown"
 msgstr "Маска мережі"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Маска мережі:"
+msgid "Subnet Mask"
+msgstr "Маска мережі"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -888,21 +888,21 @@ msgid "General"
 msgstr "Загальне"
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Інтерфейс:"
+msgid "Interface"
+msgstr "Інтерфейс"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Апаратна адреса:"
+msgid "Hardware Address"
+msgstr "Апаратна адреса"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Драйвер:"
+msgid "Driver"
+msgstr "Драйвер"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Швидкість:"
+msgid "Speed"
+msgstr "Швидкість"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -915,8 +915,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Типовий шлюз:"
+msgid "Default Route"
+msgstr "Типовий шлюз"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -929,24 +929,24 @@ msgid "Ignored"
 msgstr "Зігнорувати"
 
 #: ../src/applet-dialogs.c:815
-msgid "VPN Type:"
-msgstr "Тип VPN:"
+msgid "VPN Type"
+msgstr "Тип VPN"
 
 #: ../src/applet-dialogs.c:822
-msgid "VPN Gateway:"
-msgstr "Шлюз VPN:"
+msgid "VPN Gateway"
+msgstr "Шлюз VPN"
 
 #: ../src/applet-dialogs.c:828
-msgid "VPN Username:"
-msgstr "Користувач VPN:"
+msgid "VPN Username"
+msgstr "Користувач VPN"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
-msgstr "Шапка VPN:"
+msgid "VPN Banner"
+msgstr "Шапка VPN"
 
 #: ../src/applet-dialogs.c:840
-msgid "Base Connection:"
-msgstr "Основне з'єднання:"
+msgid "Base Connection"
+msgstr "Основне з'єднання"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
